<resources>
    <string name="app_name">FitFeed</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="remember_me_label">Remember Me</string>
    <string name="login_button_label">Login</string>
    <string name="feed_nav_bar_title">Feed</string>
    <string name="workouts_nav_bar_title">Workouts</string>
    <string name="profile_nav_bar_title">Profile</string>
    <string name="add_friends_title">Enter friend\'s username:</string>
    <string name="new_post_button">New Post</string>
    <string name="add_friend_button">Add Friend</string>
    <string name="add_friends_button">Add Friends</string>
    <string name="post_placeholder">Your friend made a post!</string>
    <string name="friend_search_placeholder">Username: holtster2000</string>
    <string name="home_text">Welcome to FitFeed!\n\nCreate a workout plan or add some friends to get started</string>
    <string name="take_picture_button">Take Picture</string>
    <string name="post_button">Post</string>
    <string name="camera_activity_text">Create your post!\n(pump pic optional)</string>
    <string name="camera_error">Error! Could not open camera.</string>
    <string name="camera_file_error">Error! Requires external file permissions to take pictures.</string>
    <string name="post_text_hint">Enter text for post…</string>
    <string name="camera_activity_image_content_description">Image to be added to post.</string>
    <string name="app_logo_description">App Logo image</string>
    <string name="username_placeholder">username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_home_gym">Edit Home Gym</string>
    <string name="no_home_gym">None</string>
    <string name="title_activity_gym_selector_maps">GymSelectorMapsActivity</string>
    <string name="location_permission_denied">FitFeed requires location access to find gyms near you.</string>
    <string name="maps_api_key">AIzaSyCNqSQ3MQT7M9WrEu9rWCW-1XPEJfsDTQ8</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="home_gym">Home Gym</string>
    <string name="error_getting_location">\"Error getting location: \"</string>
    <string name="add_friend">+ Add Friend</string>
    <string name="workouts">Workouts</string>
    <string name="_0_placeholder">0</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="home_gym_label">Home Gym:</string>
    <string name="logo">logo</string>
    <string name="profile_icon">profile_icon</string>
    <string name="add_workout">Add Workout</string>
    <string name="workout_name_placeholder">Workout Name</string>
    <string name="sets_placeholder">Sets</string>
    <string name="reps_placeholder">Reps</string>
    <string name="exercise_placeholder">Exercise</string>
    <string name="weight_placeholder">Weight</string>
    <string name="add_exercise_button">Add Exercise</string>
    <string name="empty_exercise_message">cannot be empty</string>
    <string name="workout_saved_successfully">Workout saved successfully!</string>
    <string name="error_saving_workout">"Error saving workout: "</string>
    <string name="post_workout_json_format">Workout JSON:\n%s</string>
    <string name="API_URL">http://api.fitfeed.online:8081</string>
    <string name="LOGIN_ENDPOINT">/login</string>
    <string name="REGISTER_ENDPOINT">/register</string>
    <string name="ADD_WORKOUT_ENDPOINT">/workout</string>
    <string name="PULL_WORKOUTS_ENDPOINT">/workouts</string>
    <string name="incorrect_username_or_password">Incorrect username or password</string>
    <string name="connection_error">Error connecting to server. Please check internet connection and try again.</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="successfully_created_account">Successfully created account</string>
    <string name="username_already_in_use">Email or username already in use</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="missing_required_field">Missing required field</string>
</resources>