<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    app:startDestination="@id/nav_bar_feed"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml">

    <fragment
        android:id="@+id/nav_bar_feed"
        android:name="com.example.fitfeed.fragments.FeedFragment"
        android:label="@string/feed_nav_bar_title"
        tools:layout="@layout/fragment_feed" />
    <fragment
        android:id="@+id/nav_bar_workouts"
        android:name="com.example.fitfeed.fragments.WorkoutsFragment"
        android:label="@string/workouts_nav_bar_title"
        tools:layout="@layout/fragment_workouts" />
    <fragment
        android:id="@+id/nav_bar_profile"
        android:name="com.example.fitfeed.fragments.ProfileFragment"
        android:label="@string/profile_nav_bar_title"
        tools:layout="@layout/fragment_profile" />

</navigation>