<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/social_bg"
    tools:context=".fragments.ProfileFragment">

    <ImageView
        android:id="@+id/profileIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile_icon"
        app:srcCompat="@drawable/ic_profile_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/username"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_placeholder"
        app:layout_constraintStart_toEndOf="@id/profileIcon"
        app:layout_constraintTop_toTopOf="@id/profileIcon"
        android:layout_marginStart="12dp" />

    <Button
        android:id="@+id/addFriendsButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/add_friend"
        android:backgroundTint="@color/dark_navy"
        android:textColor="@android:color/white"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@id/profileIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/profileIcon" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/profileIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp">

        <!-- Workouts -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingEnd="16dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:id="@+id/workoutsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workouts"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/workoutsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_placeholder"
                android:textSize="18sp"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <!-- Divider -->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:layout_marginEnd="16dp"/>

        <!-- Followers -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:id="@+id/followersLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/followersValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_placeholder"
                android:textSize="18sp"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <!-- Divider -->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:layout_marginEnd="16dp"/>

        <!-- Following -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/followingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/followingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_placeholder"
                android:textSize="18sp"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/black" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/homeGymLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginStart="12dp">

        <TextView
            android:id="@+id/homeGymLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_gym_label"
            android:textSize="18sp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/homeGymValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_home_gym"
            android:textSize="18sp"
            android:layout_marginTop="4dp"
            android:textColor="@android:color/black" />

        <!-- Spacing -->
        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/editHomeGymButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/baseline_edit_24"
            android:contentDescription="@string/edit_home_gym"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>