<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewWorkoutActivity"
    android:background="@color/light_blue">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveNewWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/save_button"
        android:src="@drawable/baseline_check_24"
        app:backgroundTint="@color/dark_navy"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cancelNewWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/cancel_button"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        app:backgroundTint="@color/dark_navy"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editWorkoutName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColorHint="@color/navy"
        android:ems="10"
        android:hint="@string/workout_name_placeholder"
        android:fontFamily="@font/instrument_sans"
        android:inputType="text"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:textColor="@color/dark_navy"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/linearLayoutContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/editWorkoutName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp">

        <include layout="@layout/exercise_row" />

        <Button
            android:id="@+id/addExerciseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/add_exercise_button"
            android:fontFamily="@font/instrument_sans"
            app:backgroundTint="@color/dark_navy"/>

        <Button
            android:id="@+id/deleteExerciseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete Last Exercise"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/dark_navy"
            android:visibility="gone" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>