<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/instrument_sans"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/dark_navy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/first_name"
        android:fontFamily="@font/instrument_sans"
        android:textColor="@color/dark_navy"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextFirstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextFirstName" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/dark_navy"
        android:textColorHint="@color/navy"
        android:ems="10"
        android:hint="@string/first_name"
        android:fontFamily="@font/instrument_sans"
        android:inputType="text"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:textColor="@color/dark_navy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textFirstName"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/last_name"
        android:fontFamily="@font/instrument_sans"
        android:textColor="@color/dark_navy"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextLastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextLastName" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/dark_navy"
        android:textColorHint="@color/navy"
        android:ems="10"
        android:hint="@string/last_name"
        android:fontFamily="@font/instrument_sans"
        android:inputType="text"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:textColor="@color/dark_navy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textFirstName"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstName"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/username_label"
        android:fontFamily="@font/instrument_sans"
        android:textColor="@color/dark_navy"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextUsername" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/dark_navy"
        android:textColorHint="@color/navy"
        android:ems="10"
        android:hint="@string/username_label"
        android:fontFamily="@font/instrument_sans"
        android:inputType="text"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:textColor="@color/dark_navy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textFirstName"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastName"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/email"
        android:fontFamily="@font/instrument_sans"
        android:textColor="@color/dark_navy"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/dark_navy"
        android:textColorHint="@color/navy"
        android:ems="10"
        android:hint="@string/email"
        android:fontFamily="@font/instrument_sans"
        android:inputType="textEmailAddress"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:textColor="@color/dark_navy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textFirstName"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/password_label"
        android:fontFamily="@font/instrument_sans"
        android:textColor="@color/dark_navy"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/dark_navy"
        android:textColorHint="@color/navy"
        android:ems="10"
        android:hint="@string/password_label"
        android:fontFamily="@font/instrument_sans"
        android:inputType="textPassword"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:textColor="@color/dark_navy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textFirstName"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/dark_navy"
        android:textColorHint="@color/navy"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:fontFamily="@font/instrument_sans"
        android:inputType="textPassword"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        android:textColor="@color/dark_navy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textFirstName"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/dark_navy"
        android:text="@string/create_account"
        android:fontFamily="@font/instrument_sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/dark_navy"
        android:text="@string/cancel_button"
        android:fontFamily="@font/instrument_sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreateAccount"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
